tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_1.ts(1,8): error TS1192: Module '"es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_0"' has no default export.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_0.ts (0 errors) ====
    export var a = 10;
    
==== es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_1.ts (1 errors) ====
    import defaultBinding, * as nameSpaceBinding  from "./es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS1192: Module '"es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_0"' has no default export.
    var x: number = nameSpaceBinding.a;